@@ -1,0 +1,2 @@
+libnames := pulnixdata
+libsrcs_pulnixdata := src/TM6740ConfigV1.cc
