@@ -13,7 +13,7 @@ namespace Pds {
 
     enum Detector {NoDetector,AmoIms,AmoPem,AmoETof,AmoITof,AmoMbs,AmoIis,
                    AmoXes,NumDetector};
-    enum Device   {NoDevice,Evr,Acqiris,Opal1000,NumDevice};
+    enum Device   {NoDevice,Evr,Acqiris,Opal1000,TM6740,NumDevice};
 
     DetInfo(uint32_t processId,
             Detector det, uint32_t detId,
