@@ -1,10 +1,13 @@
+2009-Apr-16	weaver			Added pulnix directory and its configuration data type.  
+					Added out-of-order damage type.
 2009-Apr-10     cpo                     Change Acqiris waveform() to return
                                         int16 instead of uint16.  Add method
                                         to get index of first valid point.
 2009-Mar-31	weaver	Tag V00-03-00.	Interface changes require version change.
 2009-Mar-31	weaver	Tag V00-02-05.	Removed TypeId(unsigned) ctor which ignored versions.  Added TwoDGaussianV1.hh.
 2009-Mar-24     cpo     Tag V00-02-04.  Add xtcreader to new app directory.
-2009-Mar-24     cpo     Tag V00-02-03.  Removed WaveformV1.hh and AcqDataDescV1.* and DataCallback.hh.  Added acqiris bit field locations in DataDescV1.hh.
+2009-Mar-24     cpo     Tag V00-02-03.  Removed WaveformV1.hh and AcqDataDescV1.* and DataCallback.hh.  
+					Added acqiris bit field locations in DataDescV1.hh.
 2009-Mar-24     cpo     Tag V00-02-01.  Improved acqiris data support.
 2009-Mar-04	weaver	Tag V00-02-00.  Added camera, evr, opal1k data formats.
 
